Fix minor alignment issue

--- a/style.css
+++ b/style.css
@@ -753,7 +753,7 @@ body{
 }
 
 .turnorder_button_add{	
-	font-size:13px;
+	font-size:12px;
 	border-radius:2px;
 	background-color: #444444;
 	width:22px;
